SF Primes/src/objects/TRV_Resource_Management_Filters__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Stores filters applied on Resource Management Page.</description>
    <fields>
        <fullName>TRV_Expertise_Major__c</fullName>
        <label>TRV Expertise Major</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRV_Expertise_Minor__c</fullName>
        <label>TRV Expertise Minor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRV_Resource_Location__c</fullName>
        <label>TRV Resource Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRV_Resource_Status__c</fullName>
        <label>TRV Resource Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRV_Resource__c</fullName>
        <label>TRV Resource</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRV_Role__c</fullName>
        <label>TRV Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRV_Skill_Level_Major__c</fullName>
        <label>TRV Skill Level Major</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRV_Skill_Level_Minor__c</fullName>
        <label>TRV Skill Level Minor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>TRV_Resource_Management_Filters</label>
</CustomObject>